# STM32_Temp_Display

./: setup
cmake/: nucleo_f103rb-toolchain.cmake
common/: CMakeLists.txt  application.cpp  junk.cpp
common/include/common/: application.h  display_seg.h  led.h  platform.h  temp_sense.h
docs/sevensegment/: display.md
nucleo_f103rb/: CMakeLists.txt  STM32F103RBTx_FLASH.ld  display_seg.cpp  display_seg.h  led.cpp  led.h  main.cpp  platform.cpp  platform.h  st_init.c  st_init.h  startup_stm32f103xb.s  stm32_assert.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_i2c.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h  system_stm32f1xx.c  temp_sense.cpp  temp_sense.h
